# h4-sdk

./: CMakeLists.txt
h4-sdk-core/: CMakeLists.txt
h4-sdk-core/include/h4-sdk-core/sensors/: abstract_imu.h  h4_ethersnacks_board.h  h4_imu.h
h4-sdk-core/src/h4-sdk-core/sensors/: abstract_imu.cpp  abstract_motor_controller.cpp  h4_ethersnacks_board.cpp  h4_imu.cpp
soem_interface_examples/: CMakeLists.txt
soem_interface_rsl/: CMakeLists.txt
soem_interface_rsl/src/soem_interface_rsl/: EthercatBusBase.cpp
soem_rsl/: CMakeLists.txt
soem_rsl/src/soem_rsl/soem_rsl/: ethercatbase.c
